src/less/flight.android.less
@import "_mixin.less";

/*====================
  Flight structure
  Specific to Android 2.3
 ====================*/

html {
  -webkit-text-size-adjust: none;
}

a, button {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-touch-callout: none;
  cursor: pointer;
}

html, body, ul, li {
  margin:0;
  padding:0;
  border:0;
}

ul {
  list-style: none;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size:16px;
    -webkit-touch-callout:none;
    -webkit-user-select:none;
    -webkit-tap-highlight-color: transparent;
}

body, .page {
    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;

    -webkit-box-align: stretch;
    -webkit-box-flex: 1;

    width: 100%;
    overflow: scroll;
}

.page {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;

    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;

    position: absolute;
}

.scrollview {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;

    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;

    overflow: auto;
}

.scrollview-inner {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;
    display:block;
    overflow: auto;
    width: 100%;
}

.scrollview-content {
    width: 100%;
    -webkit-box-flex:1;
    display: block;
}

header, footer {
  height: 45px;
  line-height: 45px;
  display: block;
  width: 100%;
  text-align: center;
  .box-sizing;
  top: 0;
  right: 0;
  position: fixed;
  z-index: 999;
  zoom: 1;
}

.hidden {
  display: none;
}

.old-android {
  .page {
    padding-top: 45px;
  }
}

